--- a/Style.css
+++ b/Style.css
@@ -67,6 +67,10 @@ h1 {
 }
 
 /* Card */
+.displaynone {
+  display: none;
+}
+
 .card {
   border: #000000 3px solid;
   height: 50vh;
@@ -74,12 +78,12 @@ h1 {
   border-radius: 20px;
 }
 
-/* .card-home {
+.card-home {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
   align-items: center;
-} */
+}
 
 h2 {
   font-family: var(--title-font);
@@ -119,7 +123,4 @@ footer {
 footer p {
   font-size: 3ch;
   font-weight: bold;
-}
-.displaynone {
-  display: none;
 }
