--- a/Style.css
+++ b/Style.css
@@ -15,7 +15,7 @@
 body {
   box-sizing: border-box;
   font-family: var(--body-font);
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
 /* Nav bar */
 
@@ -57,19 +57,21 @@ main {
   align-items: center;
   flex-direction: column;
   height: 70vh;
+  background-image: url("Images jeux/Image background.jpg");
 }
 
 h1 {
   font-size: 50px;
   text-align: center;
   font-style: italic;
-  font-weight: 300;
+  font-weight: 500;
+  margin: 15px;
 }
 
 /* Card */
-.displaynone {
-  display: none;
-}
+/* .displaynone {
+  display: none; */
+/* } */
 
 .card {
   border: #000000 3px solid;
@@ -87,11 +89,13 @@ h1 {
 
 h2 {
   font-family: var(--title-font);
-  font-size: 2rem;
+  font-size: 3rem;
   text-align: center;
+  padding-top: 10px;
+  font-weight: 300;
 }
 
-p {
+.card-home p {
   font-family: var(--body-font);
   font-size: 3rem;
   text-align: center;
