--- a/Style.css
+++ b/Style.css
@@ -12,10 +12,17 @@
   margin: 0;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   box-sizing: border-box;
   font-family: var(--body-font);
-  overflow-y: hidden;
+  display: flex;
+  flex-direction: column;
+  /* overflow-y: hidden; */
 }
 /* Nav bar */
 
@@ -52,11 +59,12 @@ nav img {
 /* Main */
 
 main {
+  flex: 1 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
-  height: 70vh;
+  /* height: 70vh; */
 }
 
 h1 {
@@ -112,6 +120,7 @@ form {
 }
 /* Footer */
 footer {
+  flex-shrink: 0;
   background-color: var(--primary-color);
   height: 15vh;
   display: flex;
