--- a/Style.css
+++ b/Style.css
@@ -57,7 +57,7 @@ main {
   align-items: center;
   flex-direction: column;
   height: 70vh;
-  background-image: url("Images jeux/Image background.jpg");
+  background-image: url("Images jeux/Image_background_ok.jpg");
 }
 
 h1 {
