--- a/Style.css
+++ b/Style.css
@@ -23,8 +23,6 @@ body {
 
   display: flex;
   flex-direction: column;
-
-
 }
 /* Nav bar */
 
@@ -69,9 +67,6 @@ main {
 
   height: 70vh;
   background-image: url("Images jeux/Image_background_ok.jpg");
-
-
-
 }
 
 h1 {
@@ -83,9 +78,10 @@ h1 {
 }
 
 /* Card */
-/* .displaynone {
-  display: none; */
-/* } */
+
+.displaynone {
+  display: none;
+}
 
 .card {
   border: #000000 3px solid;
