maj CSS et HTML links

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -64,16 +64,8 @@ main {
   justify-content: center; /*center est le bon */
   align-items: center;
   flex-direction: column;
-  background-image: url("Images jeux/Image_background_ok.jpg");
-<<<<<<< HEAD
-<<<<<<< HEAD
+  background-image: url("GameImage/Image_background_ok.jpg");
 }
-=======
-  }
->>>>>>> 10b982eef728321d7fcd285b7dea7b4a4005ad92
-=======
-}
->>>>>>> 880900c46ffa45186bed484bacd64e3e3c013ab8
 
 h1 {
   font-size: 50px;
@@ -84,16 +76,6 @@ h1 {
 }
 
 /* Card */
-<<<<<<< HEAD
-<<<<<<< HEAD
-
-=======
->>>>>>> 10b982eef728321d7fcd285b7dea7b4a4005ad92
-.displaynone {
-  display: none;
-}
-=======
->>>>>>> 880900c46ffa45186bed484bacd64e3e3c013ab8
 
 .card {
   border: #000000 3px solid;
