--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=Grand+Hotel&display=swap");
+@import "scorecard.css";
+
 :root {
   --primary-color: #ffd600;
   --secondary-color: #6fbb7c;
