--- a/CSS/scorecard.css
+++ b/CSS/scorecard.css
@@ -1,3 +1,30 @@
 .score-section h2 {
   color: black;
 }
+
+.card-score {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card-score p {
+  font-family: var(--body-font);
+  font-size: 3rem;
+  text-align: center;
+}
+
+.score-wrapper span {
+  border-width: 1.5px;
+  border-style: solid;
+  border-color: black;
+  border-radius: 5px;
+  padding: 0 80px;
+}
+
+.score-wrapper {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
