--- a/CSS/Quest.css
+++ b/CSS/Quest.css
@@ -2,32 +2,32 @@
 
 .card-card-quest {
   border: #000000 3px solid;
-  height: auto;
-  width: 50%;
+  height: 50vh;
+  width: 650px;
   border-radius: 20px;
   background-color: rgba(255, 255, 255, 0.7);
-  padding: 1%;
+  padding: 20px 15px 15px 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .quest-section {
   display: flex;
   align-items: center;
-  margin bottom: 10%;
+  /* margin bottom: 10%; */
 }
 
-.choice-wrapper {
+/* .choice-wrapper {
   display: flex;
   flex-direction: column;
-}
+} */
 
 .choice {
-  width: 80%;
-  height: 5%;
-  margin: 0.7vw;
+  width: 300px;
+  height: 30px;
+  margin: 10px;
   background-color: #ffd600;
   font-family: var(--body-font);
   border-radius: 10px;
@@ -41,43 +41,36 @@
 }
 
 .image-quest {
-  width: 50%;
+  width: 320px;
   height: auto;
   border-radius: 10px;
 }
 
 /*MEDIA QUERIES*/
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 750px) {
   .card-card-quest {
     border: #000000 3px solid;
-    height: 80%;
-    width: 65vw;
+    height: 75vh;
+    width: 450px;
     border-radius: 20px;
     background-color: rgba(255, 255, 255, 0.7);
-    padding: 18px;
+    padding: 15px 10px 10px 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 
   .quest-section {
     display: flex;
-    align-content:center;
     flex-direction: column-reverse;
   }
 
-  .image-quest {
-    width: 85%;
-    height: auto;
-    border-radius: 10px;
-  }
-
   .choice {
-    width: 80%;
-    height: 18%;
-    margin: 0 auto;
+    width: 300px;
+    height: 30px;
+    margin: 3px;
     background-color: #ffd600;
     font-family: var(--body-font);
     border-radius: 10px;
@@ -85,6 +78,58 @@
     font-size: medium;
   }
 
-  .choice-wrapper {
-     
+  .image-quest {
+    width: 400px;
+    height: auto;
+    border-radius: 10px;
+  }
+
+  .choices-wrapper {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .card-card-quest {
+    border: #000000 3px solid;
+    height: 70vh;
+    width: 80vw;
+    border-radius: 20px;
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 15px 10px 10px 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .quest-section {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .choice {
+    width: 65vw;
+    height: 30px;
+    margin: 3px;
+    background-color: #ffd600;
+    font-family: var(--body-font);
+    border-radius: 10px;
+    border: none;
+    font-size: medium;
+  }
+
+  .image-quest {
+    width: 75vw;
+    height: auto;
+    border-radius: 10px;
+  }
+
+  .choices-wrapper {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+  }
 }
