--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -61,13 +61,20 @@ nav img {
 
 /* Main */
 
+span {
+  font-size: 50px;
+  width: auto;
+  height: 50px;
+}
 main {
   flex: 1 0 auto;
   display: flex;
   justify-content: center; /*center est le bon */
   align-items: center;
   flex-direction: column;
-  background-image: url("GameImage/Image_background_ok.jpg");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-image: url(../GameImage/Image_background_ok.jpg);
 }
 
 h1 {
@@ -81,7 +88,8 @@ h1 {
 .card {
   border: #000000 3px solid;
   height: 50vh;
-  width: 50vw;
+  width: 650px;
+  padding: 15px;
   border-radius: 20px;
   background-color: rgba(255, 255, 255, 0.7);
 }
@@ -105,7 +113,8 @@ h1 {
 
 h2 {
   font-family: var(--title-font);
-  font-size: 3rem;
+  line-height: 50px;
+  font-size: 50px;
   text-align: center;
   padding-top: 10px;
   font-weight: 300;
@@ -138,6 +147,7 @@ footer {
   flex-shrink: 0;
   background-color: var(--primary-color);
   height: 50px;
+  margin-top: 25px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -151,4 +161,30 @@ footer p {
 /*JS*/
 .displaynone {
   display: none;
+}
+
+/*MEDIA QUERIES*/
+
+@media screen and (max-width: 750px) {
+  .card {
+    border: #000000 3px solid;
+    height: 50vh;
+    width: 450px;
+    border-radius: 20px;
+    background-color: rgba(255, 255, 255, 0.7);
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .card {
+    border: #000000 3px solid;
+    height: 50vh;
+    width: 80vw;
+    border-radius: 20px;
+    background-color: rgba(255, 255, 255, 0.7);
+  }
+
+  h1 {
+    line-height: 50px;
+  }
 }
