--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -87,7 +87,7 @@ h1 {
 
 .card {
   border: #000000 3px solid;
-  height: 50vh;
+  height: 92%;
   width: 650px;
   padding: 15px;
   border-radius: 20px;
