--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -142,6 +142,17 @@ form {
   margin: 0.5vw;
 }
 
+/* CONFETTIS */
+#confetti-canvas {
+  position: fixed; 
+  z-index: 999; 
+  top: 0; 
+  left: 0; 
+  width: 100vw; 
+  height: 100vh; 
+  pointer-events: none;
+}
+
 /* Footer */
 footer {
   flex-shrink: 0;
@@ -157,6 +168,7 @@ footer {
 footer p {
   font-size: 1rem;
 }
+
 
 /*JS*/
 .displaynone {
