--- a/CSS/Quest.css
+++ b/CSS/Quest.css
@@ -1,7 +1,5 @@
 /* Card */
-
 /* comment */
-
 .quest-section {
   padding: 20px 15px 15px 15px;
   display: flex;
@@ -16,6 +14,10 @@
   justify-content: space-around;
 }
 
+.img-choice-wrapper {
+  display: flex;
+}
+
 .choice {
   width: 300px;
   height: 30px;
@@ -25,6 +27,7 @@
   border-radius: 10px;
   border: none;
   font-size: medium;
+  margin: 10px;
 }
 
 .text-quest {
@@ -39,7 +42,6 @@
 }
 
 /*MEDIA QUERIES*/
-
 @media screen and (max-width: 750px) {
   .card.card-quest {
     border: #000000 3px solid;
@@ -118,7 +120,7 @@
     height: auto;
     border-radius: 10px;
   }
-
+  
   .choices-wrapper {
     display: flex;
     flex-direction: column;
