--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -30,7 +30,7 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+  gap: 2.5rem;
   padding: 1rem;
 }
 .links-wrapper {
@@ -149,15 +149,20 @@ footer p {
     background-color: rgba(255, 255, 255, 0.7);
   }
 }
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 580px) {
   .card {
     border: #000000 3px solid;
     height: 50vh;
     width: 80vw;
     border-radius: 20px;
     background-color: rgba(255, 255, 255, 0.7);
+    margin-bottom: 40px;
   }
   h1 {
     line-height: 50px;
+  }
+  nav {
+    flex-direction: column;
+    gap: 0;
   }
 }
