--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=Grand+Hotel&display=swap");
 @import "scorecard.css";
 @import "Quest.css";
+
 /* comment */
 :root {
   --primary-color: #ffd600;
@@ -10,19 +11,23 @@
   --body-font: "Afacad", sans-serif;
   --title-font: "Grand Hotel";
 }
+
 * {
   margin: 0;
 }
+
 html,
 body {
   height: 100%;
 }
+
 body {
   box-sizing: border-box;
   font-family: var(--body-font);
   display: flex;
   flex-direction: column;
 }
+
 /* Nav bar */
 nav {
   /* height: 10vh; */
@@ -33,29 +38,35 @@ nav {
   gap: 1rem;
   padding: 1rem;
 }
+
 .links-wrapper {
   padding-top: 16px;
   display: flex;
   gap: 1rem;
   text-decoration: none;
 }
+
 .links-wrapper a {
   text-decoration: none;
   color: var(--font-color);
 }
+
 .links-wrapper a:hover {
   text-decoration: underline solid 2px var(--font-color);
   text-underline-offset: 8px;
 }
+
 nav img {
   width: 150px;
 }
+
 /* Main */
 span {
   font-size: 50px;
   width: auto;
   height: 50px;
 }
+
 main {
   flex: 1 0 auto;
   display: flex;
@@ -66,6 +77,7 @@ main {
   background-repeat: no-repeat;
   background-image: url(../GameImage/Image_background_ok.jpg);
 }
+
 h1 {
   font-size: 50px;
   text-align: center;
@@ -73,6 +85,7 @@ h1 {
   font-weight: 500;
   margin: 15px;
 }
+
 .card {
   border: #000000 3px solid;
   height: 92%;
@@ -81,20 +94,24 @@ h1 {
   border-radius: 20px;
   background-color: rgba(255, 255, 255, 0.7);
 }
+
 .card-home {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
   align-items: center;
 }
+
 .card-home form {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
 }
+
 .card-home form input {
   height: 30px;
 }
+
 h2 {
   font-family: var(--title-font);
   line-height: 50px;
@@ -103,14 +120,17 @@ h2 {
   padding-top: 10px;
   font-weight: 300;
 }
+
 .card-home p {
   font-family: var(--body-font);
   font-size: 3rem;
   text-align: center;
 }
+
 form {
   font-size: 2rem;
 }
+
 .cta {
   width: 30vh;
   /* padding: 15px; */
@@ -122,6 +142,7 @@ form {
   border: none;
   margin: 0.5vw;
 }
+
 /* Footer */
 footer {
   flex-shrink: 0;
@@ -132,13 +153,28 @@ footer {
   align-items: center;
   flex-direction: column;
 }
+
 footer p {
   font-size: 1rem;
 }
+
 /*JS*/
 .displaynone {
   display: none;
 }
+
+/* CONFETTIS */
+#confetti-canvas {
+  position: fixed; 
+  z-index: 999; 
+  top: 0; 
+  left: 0; 
+  width: 100vw; 
+  height: 100vh; 
+  pointer-events: none;
+}
+
+
 /*MEDIA QUERIES*/
 @media screen and (max-width: 750px) {
   .card {
@@ -149,6 +185,7 @@ footer p {
     background-color: rgba(255, 255, 255, 0.7);
   }
 }
+
 @media screen and (max-width: 550px) {
   .card {
     border: #000000 3px solid;
@@ -157,6 +194,7 @@ footer p {
     border-radius: 20px;
     background-color: rgba(255, 255, 255, 0.7);
   }
+
   h1 {
     line-height: 50px;
   }
