--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -135,7 +135,6 @@ form {
   background-color: #1763ad;
   width: 9rem;
   margin-top: 15px;
-  width: 30vh;
   /* padding: 15px; */
   border-radius: 20px;
   color: var(--cta-color);
@@ -162,6 +161,17 @@ footer p {
 .displaynone {
   display: none;
 }
+.disabledButton {
+  pointer-events: none;
+  text-decoration: underline solid 2px var(--font-color);
+  text-underline-offset: 8px;
+}
+.disabledChoices {
+  pointer-events: none;
+}
+.mandatory {
+  border: red 1px, solid;
+}
 /*MEDIA QUERIES*/
 @media screen and (max-width: 750px) {
   .card {
@@ -170,6 +180,16 @@ footer p {
     width: 450px;
     border-radius: 20px;
     background-color: rgba(255, 255, 255, 0.7);
+  }
+  .quiz-choices {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .cta-choice {
+    width: auto;
+    text-size-adjust: auto;
   }
 }
 @media screen and (max-width: 580px) {
@@ -181,8 +201,10 @@ footer p {
     background-color: rgba(255, 255, 255, 0.7);
     margin-bottom: 40px;
   }
-  h1 {
-    line-height: 50px;
+}
+h1 {
+  line-height: 50px;
+}
 /*   }
 card-home
   nav {
