dynamic title with js + animation css appear

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -102,7 +102,11 @@ h1 {
   padding: 15px;
   border-radius: 20px;
   background-color: rgba(255, 255, 255, 0.7);
+  animation: appear 500ms ease-in;
+  opacity: 1;
 }
+
+
 
 .card-home {
   display: flex;
@@ -142,7 +146,6 @@ form {
 
 .cta {
   width: 30vh;
-  /* padding: 15px; */
   border-radius: 20px;
   color: var(--cta-color);
   background-color: var(--secondary-color);
@@ -197,6 +200,16 @@ footer p {
 /*JS*/
 .displaynone {
   display: none;
+  /* opacity: 0; */
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 /* CONFETTIS */
