--- a/CSS/Quest.css
+++ b/CSS/Quest.css
@@ -33,6 +33,8 @@
   border: none;
   font-size: medium;
   margin: 10px;
+  animation: appear 500ms ease-in;
+  opacity: 1;
 }
 
 .choice:hover {
@@ -56,8 +58,9 @@
   width: 50%;
   text-align: center;
   align-self: center;
-  
 }
+
+
 
 /*MEDIA QUERIES*/
 
@@ -137,6 +140,7 @@
     border-radius: 10px;
     border: none;
     font-size: medium;
+   
   }
 
   .image-quest {
