--- a/CSS/Quest.css
+++ b/CSS/Quest.css
@@ -25,18 +25,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* width: 50%; */
+  justify-content: space-between;
 }
 
 .choice {
   width: 300px;
-  height: 30px;
+  height: 35px; 
   margin: 10px;
   background-color: #ffd600;
   font-family: var(--body-font);
   border-radius: 10px;
   border: none;
-  font-size: medium;
+  font-size: 20px;
   margin: 10px;
   animation: appear 500ms ease-in;
   opacity: 1;
@@ -60,7 +60,7 @@
 .statement {
   font-size: 30px;
   font-weight: 200;
-  /* width: 50%; */
+  padding: 0 25px;
   text-align: center;
   align-self: center;
 }
@@ -91,21 +91,11 @@
     align-items: center;
     justify-content: space-evenly;
   }
-  /* .img-choice-wrapper {
-    display: flex;
-    flex-direction: column-reverse;
-  } */
-
-  /* .text-quest {
-    display: flex;
-    flex-direction: column-reverse;
-    
-  } */
 
   .choice {
     width: 300px;
     height: 30px;
-    margin: 3px;
+    margin: 13px;
     background-color: #ffd600;
     font-family: var(--body-font);
     border-radius: 10px;
@@ -148,7 +138,6 @@
   .choice {
     width: 65vw;
     height: 30px;
-    margin: 3px;
     background-color: #ffd600;
     font-family: var(--body-font);
     border-radius: 10px;
@@ -159,7 +148,6 @@
 
   .image-quest {
     width: 75vw;
-
     border-radius: 10px;
   }
 
