--- a/CSS/Quest.css
+++ b/CSS/Quest.css
@@ -1,5 +1,4 @@
 /* Card */
-/* comment */
 .quest-section {
   padding: 20px 15px 15px 15px;
   display: flex;
@@ -79,6 +78,10 @@
 }
 
 @media screen and (max-width: 750px) {
+    section {
+      height: 80vh;
+    }
+
   .card.card-quest {
     border: #000000 3px solid;
     height: 100%;
@@ -100,7 +103,6 @@
     font-family: var(--body-font);
     border-radius: 10px;
     border: none;
-    font-size: medium;
   }
 
   .image-quest {
@@ -119,8 +121,6 @@
 @media screen and (max-width: 580px) {
   .card.card-quest {
     border: #000000 3px solid;
-    /* height: 70vh; */
-    /* width: 80vw; */
     border-radius: 20px;
     background-color: rgba(255, 255, 255, 0.7);
     padding: 10px 7px 7px 7px;
@@ -129,11 +129,6 @@
     align-items: center;
     justify-content: space-around;
   }
-
-  /* .text-quest {
-     display: flex;
-    flex-direction: column-reverse; 
-  } */
 
   .choice {
     width: 65vw;
