--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -95,7 +95,7 @@ span {
 main {
   flex: 1 0 auto;
   display: flex;
-  justify-content: center; /*center est le bon */
+  justify-content: center;
   align-items: center;
   flex-direction: column;
   background-size: cover;
@@ -114,6 +114,8 @@ h1 {
 section {
   max-height: 80%;
   max-width: 80%;
+  display: flex;
+  justify-content: center;
 }
 
 .card {
@@ -265,9 +267,7 @@ footer p {
 
 /*MEDIA QUERIES*/
 @media screen and (max-width: 1300px) {
-  section {
-    height: 85%;
-  }
+  
   
   .quiz-choices {
     flex-direction: column;
@@ -299,7 +299,7 @@ footer p {
   text-underline-offset: 0px;
   cursor: pointer;
 }
-
+  
   .card {
     border: #000000 3px solid;
     border-radius: 20px;
